--- a/css_old/app.css
+++ b/css_old/app.css
@@ -3,8 +3,7 @@
     font-family: 'Lato';
     font-style: italic;
     font-weight: 400;
-    /* src: local('Lato Italic'), local('Lato-Italic'), url(https://fonts.gstatic.com/s/lato/v15/S6u8w4BMUTPHjxsAUi-qNiXg7eU0.woff2) format('woff2'); */
-    src: local('Lato Italic'), local('Lato-Italic'), url(font/GoogleSan/GoogleSans-Italic.woff2) format('woff2');
+    src: local('Lato Italic'), local('Lato-Italic'), url(https://fonts.gstatic.com/s/lato/v15/S6u8w4BMUTPHjxsAUi-qNiXg7eU0.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
   /* latin */
@@ -12,8 +11,7 @@
     font-family: 'Lato';
     font-style: italic;
     font-weight: 400;
-    /* src: local('Lato Italic'), local('Lato-Italic'), url(https://fonts.gstatic.com/s/lato/v15/S6u8w4BMUTPHjxsAXC-qNiXg7Q.woff2) format('woff2'); */
-    src: local('Lato Italic'), local('Lato-Italic'), url(font/GoogleSan/GoogleSans-Italic.woff2) format('woff2');
+    src: local('Lato Italic'), local('Lato-Italic'), url(https://fonts.gstatic.com/s/lato/v15/S6u8w4BMUTPHjxsAXC-qNiXg7Q.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
   /* latin-ext */
@@ -21,8 +19,7 @@
     font-family: 'Lato';
     font-style: italic;
     font-weight: 700;
-    /* src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(https://fonts.gstatic.com/s/lato/v15/S6u_w4BMUTPHjxsI5wq_FQftx9897sxZ.woff2) format('woff2'); */
-    src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(font/GoogleSan/GoogleSans-BoldItalic.woff2) format('woff2');
+    src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(https://fonts.gstatic.com/s/lato/v15/S6u_w4BMUTPHjxsI5wq_FQftx9897sxZ.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
   /* latin */
@@ -30,8 +27,7 @@
     font-family: 'Lato';
     font-style: italic;
     font-weight: 700;
-    /* src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(https://fonts.gstatic.com/s/lato/v15/S6u_w4BMUTPHjxsI5wq_Gwftx9897g.woff2) format('woff2'); */
-    src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(font/GoogleSan/GoogleSans-BoldItalic.woff2) format('woff2');
+    src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(https://fonts.gstatic.com/s/lato/v15/S6u_w4BMUTPHjxsI5wq_Gwftx9897g.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
   /* latin-ext */
@@ -39,8 +35,7 @@
     font-family: 'Lato';
     font-style: normal;
     font-weight: 400;
-    /* src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v15/S6uyw4BMUTPHjxAwXiWtFCfQ7A.woff2) format('woff2'); */
-    src: local('Lato Regular'), local('Lato-Regular'), url(font/GoogleSan/GoogleSans-Regular.woff2) format('woff2');
+    src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v15/S6uyw4BMUTPHjxAwXiWtFCfQ7A.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
   /* latin */
@@ -48,8 +43,7 @@
     font-family: 'Lato';
     font-style: normal;
     font-weight: 400;
-    /* src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v15/S6uyw4BMUTPHjx4wXiWtFCc.woff2) format('woff2'); */
-    src: local('Lato Regular'), local('Lato-Regular'), url(font/GoogleSan/GoogleSans-Regular.woff2) format('woff2');
+    src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v15/S6uyw4BMUTPHjx4wXiWtFCc.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
   /* latin-ext */
@@ -57,8 +51,7 @@
     font-family: 'Lato';
     font-style: normal;
     font-weight: 700;
-    /* src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v15/S6u9w4BMUTPHh6UVSwaPGQ3q5d0N7w.woff2) format('woff2'); */
-    src: local('Lato Bold'), local('Lato-Bold'), url(font/GoogleSan/GoogleSans-Medium.woff2) format('woff2');
+    src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v15/S6u9w4BMUTPHh6UVSwaPGQ3q5d0N7w.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
   /* latin */
@@ -66,8 +59,7 @@
     font-family: 'Lato';
     font-style: normal;
     font-weight: 700;
-    /* src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v15/S6u9w4BMUTPHh6UVSwiPGQ3q5d0.woff2) format('woff2'); */
-    src: local('Lato Bold'), local('Lato-Bold'), url(font/GoogleSan/GoogleSans-Medium.woff2) format('woff2');
+    src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v15/S6u9w4BMUTPHh6UVSwiPGQ3q5d0.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
   
@@ -93,7 +85,7 @@
   
   strong {
     font-family: 'Lato', Verdana, Helvetica, sans-serif;
-    font-size: 16px;
+    font-size: 14px;
   }
   
   heading {
@@ -169,13 +161,7 @@
       margin: 0 auto;
   }
 
-  div.zoomed { 
-    zoom: 0.80; 
-    -moz-transform: scale(0.80); 
-    -moz-transform-origin: 0 0;
-} 
-
 pre.codegen {
-  height: 100px;
+  height: 300px;
   overflow-y: scroll;
 }
